# Cellular-Automata

./: CODE_OF_CONDUCT.md  LICENSE  Project_Structures.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: basic_ci.yml
cellular_automata/: __init__.py  cd  check array.py  check_array_2.py  game_Class.py  game_of_life.py  kivy_app.py  main.py  my_module.py
tests/: test_my_module.py
